# GlobeSpeak

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  NOTICE  README.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
.github/workflows/: android.yml
docs/: GlobeSpeak_Combined_Build_Guide_2025-09-15.md
docs/pkg/: AGENTS.md  NOTICE  README.md
docs/pr/: PR-hybrid-streaming-mlkit-vad.md
engine/: build.gradle.kts  proguard-rules.pro
engine/src/androidTest/java/com/globespeak/engine/asr/: WhisperCppSmokeTest.kt
engine/src/main/: AndroidManifest.xml
engine/src/main/java/com/globespeak/engine/: LanguageManager.kt  TranslatorEngine.kt
engine/src/main/java/com/globespeak/engine/asr/: AsrFactory.kt  NoOpStreamingAsr.kt  StreamingAsr.kt  WhisperBundleVerifier.kt  WhisperCppAsr.kt
engine/src/main/java/com/globespeak/engine/backend/: BackendFactory.kt  DeviceCapability.kt  LangId.kt  ModelLocator.kt  NllbLang.kt  NllbOnnxTranslationBackend.kt  NllbSession.kt  NllbValidator.kt
engine/src/main/java/com/globespeak/engine/nllb/: PromptBuilder.kt
engine/src/main/native/: CMakeLists.txt
engine/src/main/native/jni/: WhisperBridge.cpp
engine/src/test/java/com/globespeak/engine/: LanguageManagerTest.kt  TranslatorEngineTest.kt
mobile/: build.gradle.kts
mobile/src/androidTest/java/com/globespeak/service/: TranslationServiceTest.kt
mobile/src/main/: AndroidManifest.xml
mobile/src/main/java/com/globespeak/mobile/: GlobeSpeakApp.kt  MainActivity.kt
mobile/src/main/java/com/globespeak/service/: TranslationService.kt  TranslationStreamProcessor.kt
mobile/src/main/java/com/globespeak/shared/: Bridge.kt
mobile/src/main/res/values/: themes.xml
wear/: build.gradle.kts  proguard-rules.pro
wear/src/main/: AndroidManifest.xml
wear/src/main/java/com/globespeak/: GlobeSpeakWearApp.kt
wear/src/main/java/com/globespeak/audio/: VadGate.kt
wear/src/main/java/com/globespeak/service/: AudioCaptureService.kt
wear/src/main/java/com/globespeak/shared/: Bridge.kt
wear/src/main/java/com/globespeak/ui/: MainActivity.kt  WatchViewModel.kt
wear/src/main/res/raw/: notice.txt
wear/src/test/java/com/globespeak/audio/: VadGateTest.kt
(+34 files in other folders)
